--- a/.github/workflows/fat_controller.yml
+++ b/.github/workflows/fat_controller.yml
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - run: pip install .
+    - run: pip install https://github.com/lucydot/choochoo/archive/main.zip
     - run: ${{ format('python ./scripts/check_instructor_ticket.py {0}', github.actor) }}
       
   check_student_ticket:
@@ -39,7 +39,7 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - run: pip install .
+    - run: pip install https://github.com/lucydot/choochoo/archive/main.zip
     - run: ${{ format('python ./scripts/check_student_ticket.py {0}', github.actor) }}
     
   not_issue_owner:
@@ -62,8 +62,6 @@ jobs:
       !contains( github.event.issue.labels.*.name, 'student') &&
       startsWith(github.event.comment.body,'choochoo ')
     runs-on: ubuntu-latest
-    env: 
-       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - uses: ben-z/actions-comment-on-issue@1.0.2
       with:
@@ -81,7 +79,7 @@ jobs:
       startsWith(github.event.comment.body,'choochoo ')
     runs-on: ubuntu-latest
     env: 
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GH_TOKEN: ${{ secrets.BOT_ACCESS_TOKEN }}
       ISSUE_NUMBER: ${{ github.event.issue.number }}
       GITHUB_REPOSITORY: ${{ github.repository }}
       GITHUB_ACTOR: ${{ github.actor }}
@@ -90,7 +88,7 @@ jobs:
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - run: pip install .
+    - run: pip install https://github.com/lucydot/choochoo/archive/main.zip
     - run: ${{ github.event.comment.body }}
     - uses: EndBug/add-and-commit@v4  
       with:
