--- a/.github/workflows/fat_controller.yml
+++ b/.github/workflows/fat_controller.yml
@@ -23,10 +23,9 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.x'
+        python-version: '3.10'
     - run: pip install --user https://github.com/lucydot/choochoo/archive/main.zip
-    - run: pip show choochoo
-    - run: ${{ format('python ~/.local/choochoo/scripts/check_instructor_ticket.py {0}', github.actor) }}
+    - run: ${{ format('python /home/runner/.local/lib/python3.10/site-packages/choochoo/scripts/check_instructor_ticket.py {0}', github.actor) }}
       
   check_student_ticket:
     if: github.event.label.name == 'student' 
