--- a/.github/workflows/fat_controller.yml
+++ b/.github/workflows/fat_controller.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         python-version: '3.10'
     - run: pip install --user https://github.com/lucydot/choochoo/archive/main.zip
-    - run: pip list choochoo
+    - run: pip show choochoo
     - run: ${{ format('python /home/runner/.local/lib/python3.10/site-packages/choochoo/scripts/check_instructor_ticket.py {0}', github.actor) }}
       
   check_student_ticket:
