--- a/.github/workflows/fat_controller.yml
+++ b/.github/workflows/fat_controller.yml
@@ -23,9 +23,9 @@ jobs:
     - uses: actions/checkout@v2
     - uses: actions/setup-python@v2
       with:
-        python-version: '3.10'
-    - run: pip install --user https://github.com/lucydot/choochoo/archive/main.zip
-    - run: ${{ format('python /home/runner/.local/bin/check_instructor {0}', github.actor) }}
+        python-version: '3.x'
+    - run: pip install https://github.com/lucydot/choochoo/archive/main.zip
+    - run: ${{ format('check_instructor {0}', github.actor) }}
       
   check_student_ticket:
     if: github.event.label.name == 'student' 
@@ -40,7 +40,7 @@ jobs:
       with:
         python-version: '3.x'
     - run: pip install https://github.com/lucydot/choochoo/archive/main.zip
-    - run: ${{ format('python ./scripts/check_student_ticket.py {0}', github.actor) }}
+    - run: ${{ format('check_student {0}', github.actor) }}
     
   not_issue_owner:
     if: |
