--- a/.github/workflows/fat_controller.yml
+++ b/.github/workflows/fat_controller.yml
@@ -85,6 +85,8 @@ jobs:
       GITHUB_ACTOR: ${{ github.actor }}
     steps:
     - uses: actions/checkout@v2
+      with: 
+        token: ${{ secrets.BOT_ACCESS_TOKEN }}
     - uses: actions/setup-python@v2
       with:
         python-version: '3.x'
