--- a/.github/ISSUE_TEMPLATE/choochoo-questions.yml
+++ b/.github/ISSUE_TEMPLATE/choochoo-questions.yml
@@ -8,6 +8,13 @@ body:
       value: |
         For guidance on proposing a question please see the ChooChoo documentation [here]().
         Your proposed question and answer should be written [in markdown]().
+  - type: input
+    id: title
+    attributes:
+      label: Title
+      description: What is the title of your proposed question?
+    validations:
+      required: true
   - type: textarea
     id: question
     attributes:
