--- a/questions/question_bank.yml
+++ b/questions/question_bank.yml
@@ -1,4 +1,5 @@
-lists:
+- question:
+  name: lists and things
   authors: 
     - regn 
     - re
@@ -15,7 +16,8 @@ lists:
     No waY!!
 
     `is it?`
-markdown:
+- question:
+  name: markdown
   authors: 
     - sfvs 
     - sfb
