Include if statement so triggered only if gh_pages is set to true in settings

--- a/.github/workflows/choochoo-plots.yml
+++ b/.github/workflows/choochoo-plots.yml
@@ -13,7 +13,16 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v1
+    - name: read yaml settings
+      id: read-yaml
+      uses:  KJ002/read-yaml@main
+      with: 
+        file: './instructor/settings.yml'
+        key-path: '["gh_pages"]'   
     - name: Deploy 🚀
+      if: |
+        steps.read-yaml.outputs.data == 'true' ||
+        steps.read-yaml.outputs.data == 'True'
       uses: JamesIves/github-pages-deploy-action@v4.2.5
       with:
         branch: gh-pages # The branch the action should deploy to.
