--- a/.github/workflows/choochoo-tutorials.yml
+++ b/.github/workflows/choochoo-tutorials.yml
@@ -17,16 +17,31 @@ jobs:
       with:
         python-version: '3.6'
         architecture: 'x64'
+    - name: read yaml settings
+      id: read-yaml
+      uses:  KJ002/read-yaml@main
+      with: 
+        file: './instructor/settings.yml'
+        key-path: '["gh_pages"]'   
     - name: Install library and other requirements
+      if: |
+        steps.read-yaml.outputs.data == 'true' ||
+        steps.read-yaml.outputs.data == 'True'
       run: |
         pip install jupyter nbconvert 
     - name: Convert notebook
+      if: |
+        steps.read-yaml.outputs.data == 'true' ||
+        steps.read-yaml.outputs.data == 'True'
       env:
         GH_TOKEN:  ${{ secrets.BOT_ACCESS_TOKEN  }}
       run: |
          jupyter nbconvert --to html ./tutorials/*.ipynb  
          rm ./tutorials/*.ipynb 
     - name: Deploy 🚀
+      if: |
+        steps.read-yaml.outputs.data == 'true' ||
+        steps.read-yaml.outputs.data == 'True'
       uses: JamesIves/github-pages-deploy-action@v4.2.5
       with:
         branch: gh-pages # The branch the action should deploy to.
