--- a/instructor/settings.yml
+++ b/instructor/settings.yml
@@ -16,4 +16,5 @@ instructors:
 # Choochoo project options - editing encouraged
 gh-pages: false      # enable or disable the gh_pages branch
 questions: true      # enable or disable choochoo questions functionality
+votes_required: 8    # miniimum number of votes before proposed question is accepted
 
