--- a/.github/workflows/choochoo-fat-controller.yml
+++ b/.github/workflows/choochoo-fat-controller.yml
@@ -110,7 +110,7 @@ jobs:
         python-version: '3.x'
     - run: pip install https://github.com/lucydot/choochoo/archive/main.zip
     - run: ${{ github.event.comment.body }}
-    - run: ls ./questions/
+    - run: touch ./questions/test.md
     - uses: EndBug/add-and-commit@v4  
       with:
         author_name: choochoo-bot
