--- a/.github/workflows/choochoo-fat-controller.yml
+++ b/.github/workflows/choochoo-fat-controller.yml
@@ -62,7 +62,8 @@ jobs:
     if: |
       github.event_name == 'issue_comment' && 
       github.actor != github.event.issue.user.login &&
-      startsWith(github.event.comment.body,'choochoo ')
+      startsWith(github.event.comment.body,'choochoo ') &&
+      !contains( github.event.issue.labels.*.name, 'question proposal') 
     runs-on: ubuntu-latest
     steps:
     - uses: ben-z/actions-comment-on-issue@1.0.2
@@ -87,14 +88,16 @@ jobs:
 
   choochoo:
     if: |
-      github.event_name == 'issue_comment' && 
+      (github.event_name == 'issue_comment' && 
       github.actor == github.event.issue.user.login &&
       (
         contains( github.event.issue.labels.*.name, 'instructor') ||
         contains( github.event.issue.labels.*.name, 'student') ||
-        contains( github.event.issue.labels.*.name, 'question proposal')
       ) &&
-      startsWith(github.event.comment.body,'choochoo ')
+      startsWith(github.event.comment.body,'choochoo ')) ||
+      (github.event_name == 'issue_comment' && 
+       contains( github.event.issue.labels.*.name, 'question proposal') &&
+       startsWith(github.event.comment.body,'choochoo ') )
     runs-on: ubuntu-latest
     env: 
       GH_TOKEN: ${{ secrets.BOT_ACCESS_TOKEN }}
