--- a/.github/workflows/choochoo-fat-controller.yml
+++ b/.github/workflows/choochoo-fat-controller.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         python-version: '3.x'
     - run: pip install https://github.com/lucydot/choochoo/archive/main.zip
-    - run: ${{ format('check_person {0}', github.actor) }}
+    - run: ${{ format('check_student {0}', github.actor) }}
       
   check_instructor_ticket:
     if: github.event.label.name == 'instructor' 
