--- a/instructor/settings.yml
+++ b/instructor/settings.yml
@@ -5,11 +5,11 @@ gh-pages: true
 gh-pages_branch: gh-pages
 instructors:
 - lucydot
-project_repo: lucydot/ChooChoo
+project_repo: lucydot/ChooChoo-template
 project_title: Choochoo template repository
 questions: true
 students:
 - choochoo-bot
 - lucydot
 votes_required: 3
-web_address: lucydot.github.io/ChooChoo
+web_address: https://lucydot.github.io/ChooChoo-template
