--- a/instructor/objectives.yml
+++ b/instructor/objectives.yml
@@ -1,30 +1,46 @@
+# Edit all fields below. 
+# Two sections and four objectives have been pre-defined to demonstrate syntax
+# `links`, `questions`, `tutorials` can be left undefined but in this case must be set to `[]`.
+
+# Each checklist contains one or more sections
 sections:
-- links:
+
+- name: Running Python
+
+  links:
   - https://nu-cem.github.io/CompPhys/2021/08/02/01-Running_Python
-  name: Running Python
-  objectives:
-  - links: []
-    name: open and save a Jupyter Notebook
-    questions: []
-    tutorials: []
-  - links: []
-    name: use basic Markdown in a notebook
-    questions: []
-    tutorials: []
   questions: []
   tutorials: []
-- links:
-  - https://nu-cem.github.io/CompPhys/2021/08/02/01-lists
-  name: Lists
+  
+  # Each section contains one or more objectives
   objectives:
-  - links: []
-    name: create a list
+  
+  - name: open and save a Jupyter Notebook
+    links: []
     questions: []
     tutorials: []
-  - links: []
-    name: add to a list
+    
+  - name: use basic Markdown in a notebook
+    links: []
+    questions: []
+    tutorials: []
+
+- name: Lists
+
+  links:
+  - https://nu-cem.github.io/CompPhys/2021/08/02/01-lists
+  questions: []
+  tutorials: []
+  
+  objectives:
+  
+  - name: create a list
+    links: []
+    questions: []
+    tutorials: []
+  - name: add to a list
+    links: []
     questions: []
     tutorials:
     - https://lucydot.github.io/ChooChoo-template/tutorials/lists
-  questions: []
-  tutorials: []
+
