--- a/instructor/settings.yml
+++ b/instructor/settings.yml
@@ -11,7 +11,7 @@ students:
 - raghurama123
 - lucydot
 - choochoo-bot
-web_address: https://lucydot.github.io/ChooChoo-template
+web_address: https://raghurama123.github.io/NumMethods
 
 # User options (may edit)
 questions: true
